--- a/curs24/galerie-necirculara-no-slideshow.html
+++ b/curs24/galerie-necirculara-no-slideshow.html
@@ -46,6 +46,15 @@
             background: black;
         }
 
+        .bulletWhite {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            margin-right: 10px;
+            background: white;
+        }
+
         .leftRightButtons {
             display: inline-block;
             position: absolute;
@@ -91,11 +100,15 @@
         var imagesContainerDiv;
         var leftRightButtonsDiv;
         var bulletsDiv;
+        var bulletsDivIds=[];
         var currentIndex = 0;
         var galleryWidth = 800;
         var galleryHeight = 500;
-
+        var currentId;
+        var currentElement;
         var slideShowInterval;
+        var bullet;
+        var element;
 
 
 
@@ -104,20 +117,6 @@
         function start() {
             createGalleryStructure();
             loadImages();
-            slideShowInterval = setInterval(nextImage, 2000);
-        }
-
-        function resetTimer(){
-            clearInterval(slideShowInterval);
-            slideShowInterval = setInterval(nextImage, 2000);
-        }
-
-        function nextImage(){
-            currentIndex++;
-                if (currentIndex > imageLinks.length - 1) {
-                    currentIndex = 0;
-                }
-                imagesContainerDiv.style.left = `${galleryWidth * currentIndex * (-1)}px`;
         }
 
         function createGalleryStructure() {
@@ -134,7 +133,9 @@
                 bullet = document.createElement("div");
                 bullet.className = "bullet";
                 bullet.setAttribute("data-index", i);
+                bullet.id = "id" + i;
                 bulletsDiv.appendChild(bullet);
+                bulletsDivIds.push(bullet.id);
             }
             bulletsDiv.addEventListener("click", bulletsClick);
 
@@ -146,11 +147,9 @@
             leftRightButtonsDiv.style.width = `${galleryWidth}px`;
             var leftButton = document.createElement("div");
             leftButton.className = "leftButton";
-            leftButton.innerHTML = "<";
             leftRightButtonsDiv.appendChild(leftButton);
             var rightButton = document.createElement("div");
             rightButton.className = "rightButton";
-            rightButton.innerHTML = ">";
             leftRightButtonsDiv.appendChild(rightButton);
             leftRightButtonsDiv.addEventListener("click", leftRightClick);
             document.body.appendChild(galleryDiv);
@@ -164,16 +163,16 @@
             if (e.target.className == "leftButton") {
                 currentIndex--;
                 if (currentIndex < 0) {
-                    currentIndex = imageLinks.length - 1;
+                    currentIndex = 0;
                 }
             } else if (e.target.className == "rightButton") {
                 currentIndex++;
                 if (currentIndex > imageLinks.length - 1) {
-                    currentIndex = 0;
+                    currentIndex = imageLinks.length - 1;
                 }
-                resetTimer();
             }
             imagesContainerDiv.style.left = `${galleryWidth * currentIndex * (-1)}px`;
+            changeBulletBackground();
 
         }
 
@@ -198,14 +197,28 @@
         }
 
         function bulletsClick(e) {
-            if (e.target.className =="bullet"){
+            if (e.target.className == "bullet") {
                 currentIndex = parseInt(e.target.dataset.index);
                 imagesContainerDiv.style.left = `${galleryWidth * currentIndex * (-1)}px`;
-                // console.log(typeof e.target.dataset.index, e.target.dataset.index);
-                resetTimer();
-
+                currentId = e.target.id;
+                currentElement = document.getElementById(currentId);
+ 
             }
         }
+
+        function changeBulletBackground(){
+            for(var i = 0; i < imageLinks.length; i++){
+                element = document.getElementById(bulletsDivIds[i])
+                if (bulletsDivIds[i] === bulletsDivIds[currentIndex] ){
+                    element.className = "bulletWhite";
+                } else {
+                    element.className ="bullet";
+                }
+            }
+
+        }
+
+
 
     </script>
 </head>
