--- a/ballAnimation.html
+++ b/ballAnimation.html
@@ -14,9 +14,10 @@
             var ball = new BallAnimation({
                 startX : 50,
                 endX : 500,
-                startY: 50,
-                endY: 500,
-                size: 50
+                startY: 500,
+                endY: 50,
+                size: 50,
+                borderRadius: 50
             });
             document.body.appendChild(ball.element);
         }
