--- a/curs30/sprite.html
+++ b/curs30/sprite.html
@@ -1,132 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <script src="sprite.js"></script>
     <script src="animatedSprite.js"></script>
     <script src="clickableSprite.js"></script>
     <script src="clickAnimatedSprite.js"></script>
+    <script src="arrowSprite.js"></script>
     <style>
-        .frame1 {
-            background-image: url("omuleti.png");
-            background-position: -20px -10px;
-        }
+      .frame1 {
+        background-image: url("omuleti.png");
+        background-position: -20px -10px;
+      }
 
-        .frame2 {
-            background-image: url("omuleti.png");
-            background-position: -45px -10px;
-        }
+      .frame2 {
+        background-image: url("omuleti.png");
+        background-position: -45px -10px;
+      }
 
-        .frame3 {
-            background-image: url("omuleti.png");
-            background-position: -72px -10px;
-        }
+      .frame3 {
+        background-image: url("omuleti.png");
+        background-position: -72px -10px;
+      }
 
-        .frame4 {
-            background-image: url("omuleti.png");
-            background-position: -101px -10px;
-        }
+      .frame4 {
+        background-image: url("omuleti.png");
+        background-position: -101px -10px;
+      }
 
-        .frame5 {
-            background-image: url("omuleti.png");
-            background-position: -124px -10px;
-        }
+      .frame5 {
+        background-image: url("omuleti.png");
+        background-position: -124px -10px;
+      }
 
-        .frame6 {
-            background-image: url("omuleti.png");
-            background-position: -153px -10px;
-        }
+      .frame6 {
+        background-image: url("omuleti.png");
+        background-position: -153px -10px;
+      }
 
-        .frame7 {
-            background-image: url("omuleti.png");
-            background-position: -185px -10px;
-        }
+      .frame7 {
+        background-image: url("omuleti.png");
+        background-position: -185px -10px;
+      }
 
-        .frame8 {
-            background-image: url("omuleti.png");
-            background-position: -217px -10px;
-        }
+      .frame8 {
+        background-image: url("omuleti.png");
+        background-position: -217px -10px;
+      }
     </style>
     <script>
-        document.addEventListener("DOMContentLoaded", start)
-        var sp;
-        var animatedSprite;
-        var clickableSprite;
-        var clickAnimatedSprite;
-        function start() {
-            sp = new Sprite({
-                x: 0,
-                y: 0,
-                width: 25,
-                height: 35,
-                class: "frame1",
-            });
+      document.addEventListener("DOMContentLoaded", start);
+      var sp;
+      var animatedSprite;
+      var clickableSprite;
+      var clickAnimatedSprite;
+      var arrowSprite;
+      function start() {
+        sp = new Sprite({
+          x: 0,
+          y: 0,
+          width: 25,
+          height: 35,
+          class: "frame1"
+        });
 
-            clickableSprite = new ClickableSprite({
-                x: 0,
-                y: 0,
-                width: 25,
-                height: 35,
-                class: "frame1",
-                clickCallback: spriteClick.bind(this)
+        clickableSprite = new ClickableSprite({
+          x: 0,
+          y: 0,
+          width: 25,
+          height: 35,
+          class: "frame1",
+          clickCallback: spriteClick.bind(this)
+        });
+        animatedSprite = new AnimatedSprite({
+          x: 0,
+          y: 0,
+          width: 25,
+          height: 35,
+          classes: [
+            "frame1",
+            "frame2",
+            "frame3",
+            "frame4",
+            "frame5",
+            "frame6",
+            "frame7",
+            "frame8"
+          ]
+        });
 
-            })
-            animatedSprite = new AnimatedSprite({
-                x: 0,
-                y: 0,
-                width: 25,
-                height: 35,
-                classes: ["frame1",
-                    "frame2",
-                    "frame3",
-                    "frame4",
-                    "frame5",
-                    "frame6",
-                    "frame7",
-                    "frame8"]
-            });
+        clickAnimatedSprite = new ClickAnimatedSprite({
+          x: 40,
+          y: 0,
+          width: 25,
+          height: 35,
+          classes: [
+            "frame1",
+            "frame2",
+            "frame3",
+            "frame4",
+            "frame5",
+            "frame6",
+            "frame7",
+            "frame8"
+          ]
+        });
 
-            clickAnimatedSprite = new ClickAnimatedSprite({
-                x: 40,
-                y: 0,
-                width: 25,
-                height: 35,
-                classes: ["frame1",
-                    "frame2",
-                    "frame3",
-                    "frame4",
-                    "frame5",
-                    "frame6",
-                    "frame7",
-                    "frame8"]
-            })
-            
-            document.body.appendChild(sp.element);
-            document.body.appendChild(animatedSprite.element);
-            document.body.appendChild(clickableSprite.element);
-            document.body.appendChild(clickAnimatedSprite.element);
-            clickableSprite.x = 50;
-            clickableSprite.y = 50;
-            sp.x = 100; // <=> sp.x(100)
-            console.log(sp.x);
-            sp.y = 100;
-        }
+        arrowSprite = new ArrowSprite({
+          x: 80,
+          y: 0,
+          width: 25,
+          height: 35,
+          classes: [
+            "frame1",
+            "frame2",
+            "frame3",
+            "frame4",
+            "frame5",
+            "frame6",
+            "frame7",
+            "frame8"
+          ],
+          pressKeyCallback: spritePressKey.bind(this)
+        });
 
-        function spriteClick() {
-            sp.x = Math.random() * 1000;
-            sp.y = Math.random() * 1000;
-        }
+        document.body.appendChild(sp.element);
+        document.body.appendChild(animatedSprite.element);
+        document.body.appendChild(clickableSprite.element);
+        document.body.appendChild(clickAnimatedSprite.element);
+        document.body.appendChild(arrowSprite.element);
+        clickableSprite.x = 50;
+        clickableSprite.y = 50;
+        sp.x = 100; // <=> sp.x(100)
+        console.log(sp.x);
+        sp.y = 100;
+      }
 
+      function spriteClick() {
+        sp.x = Math.random() * 1000;
+        sp.y = Math.random() * 1000;
+      }
 
+      function spritePressKey() {
+        console.log("keypressed");
+      }
     </script>
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body></body>
 </html>
