--- a/curs31/callExample.html
+++ b/curs31/callExample.html
@@ -12,7 +12,7 @@
             x: 5,
             y: 10,
             suma: function () {
-                console.log(this.x + this.y); console.log(this.x + this.y);
+                console.log(this.x + this.y);
             }
         }
         var b = {
