--- a/curs1-2/layout-fluid-mixt.html
+++ b/curs1-2/layout-fluid-mixt.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Mixed layout
-        </title>
-    </head>
-<style>
-    body{
-        font-size: 0;
-        margin: 0;
-        padding: 0;
+  <head>
+    <title>
+      Mixed layout- Adina
+    </title>
+  </head>
+  <style>
+    body {
+      font-size: 0;
+      margin: 0;
+      padding: 0;
     }
-    .header{
-        height: 50px;
+    .header {
+      height: 50px;
     }
     .left {
-        display:inline-block;
-        background: black;
-        width: 200px;
-        height: calc(100vh - 50px);
+      display: inline-block;
+      background: black;
+      height: calc(100vh - 50px);
+      width: 200px;
     }
     .middle {
-        display:inline-block;
-        background: red;
-        width: calc(100vw - 500px);
-        height: calc(100vh - 50px);
-        min-width: 400px;
+      display: inline-block;
+      background: red;
+      height: calc(100vh - 50px);
+      width: calc(100vw - 500px);
+      min-width: 400px;
     }
-    .right{
-        display:inline-block;
-        background: yellow;
-        width: 300px;
-        height: calc(100vh - 50px);
-        position: absolut;
-        right: 0;
+    .right {
+      display: inline-block;
+      background: yellow;
+      width: 300px;
+      height: calc(100vh - 50px);
+      position: absolute;
+      right: 0;
     }
-    .container{
-        min-width: 900px;
-        width: 100px;
-        height: 100vh;
-        position: relative;
+    .container {
+      position: relative;
+      min-width: 900px;
+      width: 100vw;
+      height: 100vh;
     }
-</style>
-<body>
+  </style>
+  <body>
     <div class="container">
-    <div class="header"></div>
-    <div class="left"></div>
-    <div class="middle"></div>
-    <div class="right"></div>
+      <div class="header"></div>
+      <div class="left"></div>
+      <div class="middle"></div>
+      <div class="right"></div>
     </div>
-</body>
+  </body>
 </html>
