--- a/curs1-2/cards-refacut.html
+++ b/curs1-2/cards-refacut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Colored Cards</title>
+    <title>Colored Cards- recap</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <style>
@@ -20,40 +20,45 @@
       flex-grow: 2;
       margin-top: 1em;
       margin-left: 1em;
-      width: 300px;
       height: 160px;
       border: grey 1px solid;
       background-color: white;
     }
     .titleBox {
       display: inline-block;
-      width: 240px;
+      flex-grow: 3.94;
       padding-top: 20px;
       padding-left: 20px;
     }
     .thumbnails {
       display: inline-block;
-      width: 30px;
+      flex-grow: 0.03;
       padding-top: 20px;
       text-align: right;
     }
-    .refresh {
+    .reload {
       display: inline-block;
-      width: 30px;
-      padding-top: 20px;
+      flex-grow: 0.03;
+      padding-top: 25px;
       text-align: right;
     }
     .headBox1 {
       background: red;
+      display: flex;
+      flex-direction: row;
       height: 80px;
     }
     .headBox2 {
       background: rgb(70, 124, 223);
+      display: flex;
+      flex-direction: row;
       height: 80px;
     }
     .headBox3 {
       background: rgb(70, 173, 139);
       height: 80px;
+      display: flex;
+      flex-direction: row;
     }
 
     .informationBox {
