--- a/curs1-2/cards-refacut.html
+++ b/curs1-2/cards-refacut.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>Colored Cards- recap</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <style>
     .generalContainer {
@@ -10,6 +13,7 @@
       display: flex;
       flex-direction: column;
       background-color: rgb(154, 165, 167);
+      padding-bottom: 2em;
     }
     .horizontalContainer {
       display: flex;
@@ -207,7 +211,7 @@
               ><br /><br />
               <span>Description text here....</span>
             </div>
-            <div class = "reload"><i class="fa fa-refresh"></i></div>
+            <div class="reload"><i class="fa fa-refresh"></i></div>
             <div class="thumbnails">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -235,7 +239,7 @@
               ><br /><br />
               <span>Description text here....</span>
             </div>
-            <div class = "reload"><i class="fa fa-refresh"></i></div>
+            <div class="reload"><i class="fa fa-refresh"></i></div>
             <div class="thumbnails">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
