--- a/curs1-2-pozitionari/profile.html
+++ b/curs1-2-pozitionari/profile.html
@@ -8,11 +8,12 @@
       .container {
         padding-top: 10%;
         text-align: center;
+        line-height: 2.3em;
       }
       .image {
         margin: auto;
-        height: 100px;
-        width: 100px;
+        height: 200px;
+        width: 200px;
         border-radius: 50%;
         overflow: hidden;
       }
@@ -20,15 +21,19 @@
         font-size: 1.3em;
         font-weight: normal;
       }
+      button{
+        height: 2.3em;
+        width: 20%;
+        border-radius: 15px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="image">
-        <img src="profile-generic.png" height="100px" width="100px" />
+        <img src="profile-generic.png" height="200px" width="200px" />
       </div>
       <h3>MyNAME</h3>
-      <br /><br />
       <a href="https:/mywebsite.com">https:/mywebsite.com</a><br />
       <span class="details">Info about me</span><br /><br />
       <a href="mailto:webmaster@example.com">thisis@myemail.com</a><br />
